--- a/blog/article/templates/article/article.html
+++ b/blog/article/templates/article/article.html
@@ -1,13 +1,9 @@
-<!doctype html>
-{% load static %}
-<html>
-<head>
-<title>部落格</title>
-<meta charset="utf-8">
-<link rel="stylesheet" href="{% static 'main/css/main.css' %}">
-</head>
-<body>
-{% include 'main/menu.html' %}
-<h2>部落格說 -- Hello world!</h2> 
-</body>
-</html>
+{% extends 'main/base.html' %}
+
+{% block heading %}
+部落格
+{% endblock %}
+
+{% block content %}
+<p>歡迎蒞臨 主人。</p>
+{% endblock %}
